
CONFIG
    Added: Missing LOGROTATE(8) for SYSLOG-NG(8) which can be installed on some system in place of RSYSLOGD(8) -- Backported from 1.6.x
    Added: Specific LOGROTATE(8) configuration file for rsyslog (Ubuntu 14.04/Trusty Thar) -- Backported from 1.6.x
    Fixed: Bad value for X-Forward-* headers (Proxy feature / Apache2 ssl vhosts) -- Backported from 1.6.x

INSTALLER
    Fixed: DIRMNGR(8) daemon not being terminated when expected (APT key management -- Debian adapter) -- Backported from 1.6.x

YOUTRACK
    IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
    IP-1785 Exception in circular email feature (admin interface)
    IP-1786 Customer assignment (to reseller) not showing all clients

------------------------------------------------------------------------------------------------------------------------
1.5.3
------------------------------------------------------------------------------------------------------------------------

2018-05-16: Laurent Declercq
    RELEASE i-MSCP 1.5.3

BACKEND
    Backport: Fix for #IP-1758 (Could not remove HTTPD log directory -- The immutable bit is removed too late) from 1.6.x branch
    Fixed: Couldn't restore backup archive - Can't locate object method "selectall_array" via package "DBI::db" (restore backup feature)
    Fixed: Default PHP INI values (PHP Editor)

DATABASE
    Backport: Fix for #IP-1742 (i-MSCP upgrade error - Unknown 'mail_user' database table in database update r254) from 1.6.x branch

FRONTEND
    Backport: Fix for #IP-1749 (User profile fields validation too strict from 1.6.x branch)
    Cosmetic: Remove borders in table header/footer (layout)
    Fixed: Couldn't generate self-signed SSL certificate - Couldn't write in temporary SSL configuration file
    Fixed: Couldn't access support section when logged as reseller
    Fixed: Couldn't update customer password when logged in as administrator or reseller