@@ -1,0 +1,385 @@
+<packages>
+    <frontend>
+        <nginx
+                default="1"
+                description="Nginx server"
+                class="Package::FrontEnd"
+                repository_conflict="http://nginx.org/packages/ubuntu"
+        >
+            <package>nginx-full</package>
+            <package_conflict>nginx</package_conflict>
+        </nginx>
+    </frontend>
+    <httpd>
+        <apache_fcgid
+                description="Apache2 (MPM Event) server and PHP with CGI/FastCGI SAPI"
+                class="Servers::httpd::apache_fcgid"
+        >
+            <package>apache2</package>
+            <package post_install_tasks="sh apache2_postinst.sh">apache2-bin</package>
+            <package>apache2-data</package>
+            <package>apache2-dev</package>
+            <package post_install_tasks="update-alternatives --set suexec /usr/lib/apache2/suexec-pristine">
+                apache2-suexec-pristine
+            </package>
+            <package>libapache2-mod-fcgid</package>
+        </apache_fcgid>
+        <apache_itk
+                description="Apache2 (MPM ITK) server and PHP with Apache2 SAPI"
+                class="Servers::httpd::apache_itk"
+        >
+            <package>apache2</package>
+            <package post_install_tasks="sh apache2_postinst.sh">apache2-bin</package>
+            <package>apache2-data</package>
+            <package>apache2-dev</package>
+            <package_delayed>libapache2-mpm-itk</package_delayed>
+        </apache_itk>
+        <apache_php_fpm
+                default="1"
+                description="Apache2 (MPM Event) server and PHP with FPM/FastCGI SAPI"
+                class="Servers::httpd::apache_php_fpm"
+        >
+            <package>apache2</package>
+            <package post_install_tasks="sh apache2_postinst.sh">apache2-bin</package>
+            <package>apache2-data</package>
+            <package>apache2-dev</package>
+            <package post_install_tasks="update-alternatives --set suexec /usr/lib/apache2/suexec-pristine">
+                apache2-suexec-pristine
+            </package>
+        </apache_php_fpm>
+    </httpd>
+    <php>
+        <php5.6
+                default="1"
+                description="PHP 5.6"
+                class="Servers::php"
+                repository_conflict="http://packages.dotdeb.org"
+                repository="http://ppa.launchpad.net/ondrej/php/ubuntu xenial main"
+                repository_key_id="E5267A6C"
+                repository_key_srv="keyserver.ubuntu.com"
+                pinning_package="*"
+                pinning_pin="release o=LP-PPA-ondrej-php"
+                pinning_pin_priority="1001"
+        >
+            <package>php5.6</package>
+            <package post_install_tasks="update-alternatives --set php /usr/bin/php5.6">php5.6-cli</package>
+            <package>php5.6-cgi</package>
+            <package>php5.6-fpm</package>
+            <package
+                    post_install_tasks="phpenmod ctype fileinfo ftp gettext iconv pdo phar posix sockets; update-alternatives --set phar /usr/bin/phar5.6; update-alternatives --set phar.phar /usr/bin/phar.phar5.6"
+            >
+                php5.6-common
+            </package>
+            <package post_install_tasks="phpenmod curl">php5.6-curl</package>
+            <package post_install_tasks="phpenmod gd">php5.6-gd</package>
+            <package post_install_tasks="phpenmod gmp">php5.6-gmp</package>
+            <package post_install_tasks="phpenmod imap">php5.6-imap</package>
+            <package post_install_tasks="phpenmod intl">php5.6-intl</package>
+            <package post_install_tasks="phpenmod json">php5.6-json</package>
+            <package post_install_tasks="phpenmod mbstring">php5.6-mbstring</package>
+            <package post_install_tasks="phpenmod mcrypt">php5.6-mcrypt</package>
+            <package post_install_tasks="phpenmod mysqlnd mysqli pdo_mysql">php5.6-mysql</package>
+            <package post_install_tasks="phpenmod opcache">php5.6-opcache</package>
+            <package post_install_tasks="phpenmod pspell">php5.6-pspell</package>
+            <package post_install_tasks="phpenmod dom xml xmlreader xmlwriter">php5.6-xml</package>
+            <package post_install_tasks="phpenmod zip">php5.6-zip</package>
+            <package post_install_tasks="sh php_apcu.sh 5.6">php-apcu</package>
+            <package>php-pear</package>
+            <package>libapache2-mod-php5.6</package>
+            <package_conflict>libapache2-mod-php5</package_conflict>
+            <package_conflict>php5-common</package_conflict>
+        </php5.6>
+        <php7.0
+                description="PHP 7.0"
+                class="Servers::php"
+                repository_conflict="http://packages.dotdeb.org"
+                repository="http://ppa.launchpad.net/ondrej/php/ubuntu xenial main"
+                repository_key_id="E5267A6C"
+                repository_key_srv="keyserver.ubuntu.com"
+                pinning_package="*"
+                pinning_pin="origin ppa.launchpad.net"
+                pinning_pin_priority="1001"
+        >
+            <package>php7.0</package>
+            <package>php7.0-cgi</package>
+            <package post_install_tasks="update-alternatives --set php /usr/bin/php7.0">php7.0-cli</package>
+            <package>php7.0-fpm</package>
+            <package
+                    post_install_tasks="phpenmod ctype fileinfo ftp gettext iconv pdo phar posix sockets; update-alternatives --set phar /usr/bin/phar7.0; update-alternatives --set phar.phar /usr/bin/phar.phar7.0"
+            >
+                php7.0-common
+            </package>
+            <package post_install_tasks="phpenmod curl">php7.0-curl</package>
+            <package post_install_tasks="phpenmod gd">php7.0-gd</package>
+            <package post_install_tasks="phpenmod gmp">php7.0-gmp</package>
+            <package post_install_tasks="phpenmod imap">php7.0-imap</package>
+            <package post_install_tasks="phpenmod intl">php7.0-intl</package>
+            <package post_install_tasks="phpenmod json">php7.0-json</package>
+            <package post_install_tasks="phpenmod mbstring">php7.0-mbstring</package>
+            <package post_install_tasks="phpenmod mcrypt">php7.0-mcrypt</package>
+            <package post_install_tasks="phpenmod mysqlnd mysqli pdo_mysql">php7.0-mysql</package>
+            <package post_install_tasks="phpenmod opcache">php7.0-opcache</package>
+            <package post_install_tasks="phpenmod pspell">php7.0-pspell</package>>
+            <package post_install_tasks="phpenmod dom xml xmlreader xmlwriter">php7.0-xml</package>
+            <package post_install_tasks="phpenmod zip">php7.0-zip</package>
+            <package post_install_tasks="sh php_apcu.sh 7.0">php-apcu</package>
+            <package post_install_tasks="sh php_apcu_bc.sh 7.0">php-apcu-bc</package>
+            <package>php-pear</package>
+            <package>libapache2-mod-php7.0</package>
+            <package_conflict>php5-common</package_conflict>
+            <package_conflict>libapache2-mod-php5</package_conflict>
+        </php7.0>
+        <php7.1
+                description="PHP 7.1"
+                class="Servers::php"
+                repository="http://ppa.launchpad.net/ondrej/php/ubuntu xenial main"
+                repository_key_id="E5267A6C"
+                repository_key_srv="keyserver.ubuntu.com"
+                pinning_package="*"
+                pinning_pin="release o=LP-PPA-ondrej-php"
+                pinning_pin_priority="1001"
+        >
+            <package>php7.1</package>
+            <package post_install_tasks="update-alternatives --set php /usr/bin/php7.1">php7.1-cli</package>
+            <package>php7.1-cgi</package>
+            <package>php7.1-fpm</package>
+            <package
+                    post_install_tasks="phpenmod ctype fileinfo ftp gettext iconv pdo phar posix sockets; update-alternatives --set phar /usr/bin/phar7.1; update-alternatives --set phar.phar /usr/bin/phar.phar7.1"
+            >
+                php7.1-common
+            </package>
+            <package post_install_tasks="phpenmod curl">php7.1-curl</package>
+            <package post_install_tasks="phpenmod gd">php7.1-gd</package>
+            <package post_install_tasks="phpenmod gmp">php7.1-gmp</package>
+            <package post_install_tasks="phpenmod imap">php7.1-imap</package>
+            <package post_install_tasks="phpenmod intl">php7.1-intl</package>
+            <package post_install_tasks="phpenmod json">php7.1-json</package>
+            <package post_install_tasks="phpenmod mbstring">php7.1-mbstring</package>
+            <package post_install_tasks="phpenmod mcrypt">php7.1-mcrypt</package>
+            <package post_install_tasks="phpenmod mysqlnd mysqli pdo_mysql">php7.1-mysql</package>
+            <package post_install_tasks="phpenmod opcache">php7.1-opcache</package>
+            <package post_install_tasks="phpenmod pspell">php7.1-pspell</package>
+            <package post_install_tasks="phpenmod dom xml xmlreader xmlwriter">php7.1-xml</package>
+            <package post_install_tasks="phpenmod zip">php7.1-zip</package>
+            <package post_install_tasks="sh php_apcu.sh 7.1">php-apcu</package>
+            <package post_install_tasks="sh php_apcu_bc.sh 7.1">php-apcu-bc</package>
+            <package>php-pear</package>
+            <package>libapache2-mod-php7.1</package>
+            <package_conflict>php5-common</package_conflict>
+            <package_conflict>libapache2-mod-php5</package_conflict>
+        </php7.1>
+    </php>
+    <po>
+        <courier
+                description="Courier IMAP/POP3 servers"
+                class="Servers::po::courier"
+        >
+            <package>courier-authlib-mysql</package>
+            <package>courier-imap</package>
+            <package>courier-imap-ssl</package>
+            <package>courier-pop</package>
+            <package>courier-pop-ssl</package>
+            <package>libgamin0</package>
+            <package>libsasl2-modules</package>
+            <package>maildrop</package>
+            <package_conflict>libsasl2-modules-sql</package_conflict>
+            <package_conflict>sasl2-bin</package_conflict>
+        </courier>
+        <dovecot
+                default="1"
+                description="Dovecot IMAP/POP3 servers"
+                class="Servers::po::dovecot"
+        >
+            <package>dovecot-core</package>
+            <package>dovecot-imapd</package>
+            <package>dovecot-pop3d</package>
+            <package>dovecot-mysql</package>
+        </dovecot>
+    </po>
+    <mta>
+        <postfix
+                default="1"
+                description="Postfix server"
+                class="Servers::mta::postfix"
+        >
+            <package>postfix</package>
+            <package_conflict>procmail</package_conflict>
+        </postfix>
+    </mta>
+    <ftpd>
+        <proftpd
+                default="1"
+                description="ProFTPD server"
+                class="Servers::ftpd::proftpd"
+        >
+            <package>proftpd-basic</package>
+            <package>proftpd-mod-mysql</package>
+            <package_conflict>vsftpd</package_conflict>
+        </proftpd>
+        <vsftpd
+                description="VsFTPD server"
+                class="Servers::ftpd::vsftpd"
+        >
+            <package
+                    rebuild_with_patches="libpam-mysql/patches/dpatch"
+                    patch_sys_type="dpatch"
+                    pkg_src_name="pam-mysql"
+            >
+                libpam-mysql
+            </package>
+            <package>vsftpd</package>
+            <package_conflict>proftpd-basic</package_conflict>
+        </vsftpd>
+    </ftpd>
+    <named>
+        <bind
+                default="1"
+                description="Bind9 server"
+                class="Servers::named::bind"
+        >
+            <package>resolvconf</package>
+            <package>bind9</package>
+        </bind>
+        <external_server
+                description="No local DNS server"
+                class="Servers::noserver"
+        >
+            <package>resolvconf</package>
+        </external_server>
+    </named>
+    <sql>
+        <mysql_5.7
+                default="1"
+                description="MySQL 5.7 server"
+                class="iMSCP::Servers::Sqld::Mysql::Debian"
+                pinning_package="libmysqlclient20 mysql-client-5.7 mysql-common mysql-server-5.7"
+                pinning_pin="release o=Ubuntu,n=bionic"
+                pinning_pin_priority="1001"
+        >
+            <package>libmysqlclient20</package>
+            <package>mysql-common</package>
+            <package>mysql-client-5.7</package>
+            <package>mysql-server-5.7</package>
+        </mysql_5.7>
+        <mariadb_10.1
+                description="MariaDB 10.1 server"
+                class="iMSCP::Servers::Sqld::Mariadb::Debian"
+                pinning_package="libmysqlclient20 mariadb-client-10.1 mariadb-common mariadb-server-core-10.1 mysql-common"
+                pinning_pin="release o=Ubuntu,n=bionic"
+                pinning_pin_priority="1001"
+        >
+            <package>libmysqlclient20</package>
+            <package>mysql-common</package>
+            <package>mariadb-client-10.1</package>
+            <package>mariadb-common</package>
+            <package>mariadb-server-10.1</package>
+            <pre_install_task>/bin/mkdir -p /etc/mysql/mariadb.conf.d</pre_install_task>
+        </mariadb_10.1>
+        <percona_5.7
+                description="Percona 5.7 server"
+                class="Servers::sqld::percona"
+                repository="http://repo.percona.com/apt bionic main"
+                repository_key_id="8507EFA5"
+                repository_key_srv="keyserver.ubuntu.com"
+                pinning_package="libperconaserverclient20 libperconaserverclient20-dev percona-server-client-5.7 percona-server-common-5.7 percona-server-server-5.7"
+                pinning_pin="origin repo.percona.com"
+                pinning_pin_priority="1001"
+                allow_switch="remote_server"
+        >
+            <package>libmysqlclient20</package>
+            <package>libperconaserverclient20</package>
+            <package>mysql-common</package>
+            <package>percona-server-client-5.7</package>
+            <package>percona-server-common-5.7</package>
+            <package>percona-server-server-5.7</package>
+        </percona_5.7>
+        <remote_server
+                description="Remote MySQL server"
+                class="iMSCP::Servers::Sqld::Remote::Debian"
+                pinning_package="libmysqlclient20 mysql-client-5.7 mysql-common"
+                pinning_pin="release o=Ubuntu,n=bionic"
+                pinning_pin_priority="1001"
+        >
+            <package>libmysqlclient20</package>
+            <package>mysql-common</package>
+            <package>mysql-client-5.7</package>
+        </remote_server>
+    </sql>
+    <perl>
+        <package>perl</package>
+        <package>libcrypt-blowfish-perl</package>
+        <package>libcrypt-cbc-perl</package>
+        <package>libcrypt-eksblowfish-perl</package>
+        <package>libcrypt-rijndael-perl</package>
+        <package>libdata-validate-ip-perl</package>
+        <package>libdate-simple-perl</package>
+        <package>libdatetime-perl</package>
+        <package>libdbd-mysql-perl</package>
+        <package>libdbi-perl</package>
+        <package>libemail-valid-perl</package>
+        <package>libfile-copy-recursive-perl</package>
+        <package>libfile-homedir-perl</package>
+        <package>libhash-merge-perl</package>
+        <package>libjson-perl</package>
+        <package>libmailtools-perl</package>
+        <package>libmime-tools-perl</package>
+        <package>libnet-dns-perl</package>
+        <package>libnet-libidn-perl</package>
+        <package>libsort-naturally-perl</package>
+        <package>libtimedate-perl</package>
+        <package>libunix-mknod-perl</package>
+        <package>libwww-perl</package>
+        <package>libxml-parser-perl</package>
+        <package>libxml-simple-perl</package>
+    </perl>
+    <ssl
+            pinning_package="openssl libssl-dev"
+            pinning_pin="release o=Ubuntu,n=xenial"
+            pinning_pin_priority="1002"
+    >
+        <package>libssl-dev</package>
+        <package>openssl</package>
+    </ssl>
+    <other>
+        <package>apt-src</package>
+        <package>at</package>
+        <package>bash</package>
+        <package>bash-completion</package>
+        <package>bzip2</package>
+        <package>ca-certificates</package>
+        <package>coreutils</package>
+        <package>cron</package>
+        <package>curl</package>
+        <package>devscripts</package>
+        <package>dirmngr</package>
+        <package>dnsutils</package>
+        <package>dpkg-dev</package>
+        <package>findutils</package>
+        <package>gcc</package>
+        <package>git</package>
+        <package>gzip</package>
+        <package>ifupdown</package>
+        <package>iptables</package>
+        <package>iproute</package>
+        <package>ispell</package>
+        <package>libc6-dev</package>
+        <package>locales-all</package>
+        <package>lzma</package>
+        <package>make</package>
+        <package>mawk</package>
+        <package>patch</package>
+        <package>pbuilder</package>
+        <package>pbzip2</package>
+        <package>pigz</package>
+        <package>ssh</package>
+        <package>sudo</package>
+        <package>tar</package>
+    </other>
+    <sendmail>
+        <package_conflict>sendmail</package_conflict>
+        <package_conflict>sendmail-base</package_conflict>
+        <package_conflict>sendmail-bin</package_conflict>
+        <package_conflict>sendmail-cf</package_conflict>
+        <package_conflict>sendmail-doc</package_conflict>
+    </sendmail>
+</packages>
